Mon Apr 28 08:44:43 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/Kokyu_DLL.dsp:
	* Kokyu/Kokyu_Static.dsp: 
	  Updated projects to include DSRT work.
	
	* Kokyu/DSRT_Schedulers.cpp:
	* Kokyu/DSRT_Scheduler_Impl.cpp: Fixed some compiler errors on
	  MSVC++. Thanks to Simon McQueen for pointing this out.

Mon Apr 28 07:54:04 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_Stream.h (ACE_MEM_Stream): Also mentioned that the
	  message size limit can be tweaked from MEM_Connector.  Thanks to
	  Tongzhe Cui <tonycui@yahoo.com> for the suggestion.

Mon Apr 28 09:21:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-cygwin32-common.h:
          Added ACE_HAS_STRPTIME because cygwin supports it.

        * ace/config-doxygen.h:
          Added ACE_HAS_STRPTIME to generate documentation.

Sun Apr 27 14:39:00 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_IO.h:
	* ace/MEM_Stream.h: Added more documentation on the message size
	  limit a MEM_Stream can handle and how to adjust the limit.
	  Thanks to Tongzhe Cui <tonycui@yahoo.com> for motivating the
	  change.

Sun Apr 27 18:38:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Timer_Queue/TQTDDLL.dsp:
          Set correct DLL name in the Release configuration

Sat Apr 26 21:20:37 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_Acceptor.cpp (accept): Fixed how the accept acquite the
	  connecting (remote) port number.  Thanks to Steve Huston for
	  calling this to my attention.

Sat Apr 26 12:00:36 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/DSRT_Scheduler.cpp:
	  Corrected calculation for priority range.

	* Kokyu/tests/DSRT_MIF/MIF.cpp:
	  Modifications to set the priority of thread based on the value
	  returned from the scheduler.

Sat Apr 26 08:25:57 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* performance-tests/SCTP/SOCK_SEQPACK_clt.cpp:
	* performance-tests/SCTP/SOCK_STREAM_clt.cpp: Fixed compile
	  errors.
